add navigation bar

--- a/app/index.html
+++ b/app/index.html
@@ -2,22 +2,24 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
+    <title>野鹤仙云的秘密基地</title>
+    <meta name="description" content="野鹤仙云的秘密基地">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="scripts/directives/siderBar.css">
     <!-- endbuild -->
   </head>
   <body ng-app="webapp1App">
     <!--[if lte IE 8]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+      <p class="browsehappy">您正在使用 <strong>低版本</strong> 浏览器. 请 <a href="http://browsehappy.com/">升级浏览器</a> 提升用户体验.</p>
     <![endif]-->
 
     <!-- Add your site or application content here -->
@@ -48,8 +50,14 @@
       </div>
     </div>
 
-    <div class="container">
-    <div ng-include="'views/main.html'" ng-controller="MainCtrl"></div>
+    <div class="container-opt">
+      <!-- 菜单 -->
+      <div class="sidebar">
+        <div sider-bar></div>
+      </div>
+      <div class="content">
+        <div ng-include="'views/main.html'" ng-controller="MainCtrl"></div>
+      </div>
     </div>
 
     <div class="footer">
@@ -81,12 +89,15 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/directives/siderbar.js"></script>
         <!-- endbuild -->
 </body>
 </html>
