--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="scripts/directives/siderBar.css">
+    <base href="/">
     <!-- endbuild -->
   </head>
   <body ng-app="webapp1App">
@@ -35,15 +36,14 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">webapp1</a>
+            <a class="navbar-brand">webapp1</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li class="active"><a ui-sref="app.home">Home</a></li>
+              <li><a ui-sref="app.hello">About</a></li>
             </ul>
           </div>
         </div>
@@ -55,9 +55,7 @@
       <div class="sidebar">
         <div sider-bar></div>
       </div>
-      <div class="content">
-        <div ng-include="'views/main.html'" ng-controller="MainCtrl"></div>
-      </div>
+      <ui-view></ui-view>
     </div>
 
     <div class="footer">
